k8s/networkpolicy/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: frontend-policy
  namespace: smart-hostel

spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - {}

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 3000

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
